# rust-template

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  lefthook.yml  rustfmt.toml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/lib/: Cargo.toml
