[workspace]
members = ["crates/lib", "crates/app"]
default-members = ["crates/lib", "crates/app"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.96"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1"

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "s"
panic         = "abort"
strip         = true

[profile.profiler]
debug           = true
inherits        = "release"
split-debuginfo = "unpacked"
strip           = "none"

[workspace.lints.clippy]
complexity = { level = "warn", priority = -1 }
nursery    = { level = "warn", priority = -1 }
pedantic   = { level = "warn", priority = -1 }
perf       = { level = "warn", priority = -1 }
style      = { level = "warn", priority = -1 }